// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile component should render 1`] = `
<DocumentFragment>
  <div
    class="tile tile-gradient tile--has-link"
    style="--tile-background: #00639a;"
  >
    <a
      aria-hidden="true"
      href="https://www.uniprot.org"
      tabindex="-1"
    />
    <div
      aria-hidden="true"
      class="tile__background-image"
    >
      <test-file-stub />
    </div>
    <div
      class="tile__main-content"
    >
      <h2
        class="tile__header big"
      >
        Tile title
      </h2>
      <h3
        class="tile__subtitle small"
      >
        Subtitle
      </h3>
    </div>
    <small
      class="tile__description"
    >
      My description
    </small>
  </div>
</DocumentFragment>
`;

exports[`Tile component should render with default specified width 1`] = `
<DocumentFragment>
  <div
    class="tile tile--has-link"
    style="width: 20rem;"
  >
    <a
      aria-hidden="true"
      href="https://www.uniprot.org"
      tabindex="-1"
    />
    <div
      aria-hidden="true"
      class="tile__background-image"
    />
    <div
      class="tile__main-content"
    >
      <h2
        class="tile__header big"
      >
        Tile title
      </h2>
    </div>
  </div>
</DocumentFragment>
`;
